Prevent long words from causing overflow

--- a/app/src/app.css
+++ b/app/src/app.css
@@ -1192,6 +1192,7 @@ label > input[type='checkbox'].toggle {
 	font-size: 1rem;
 	line-height: 1.5;
 	min-height: 1.5em;
+	overflow-wrap: break-word;
 }
 
 .markdown-body ol,
